--- a/index.html
+++ b/index.html
@@ -224,10 +224,10 @@
               <span class="chip">Hardware • Software • Marketing</span>
             </div>
             <div class="metrics" role="list">
-              <div class="metric" role="listitem"><div class="kpi" id="kpi-found">312</div><div class="label">Prototypes cataloged</div></div>
-			  <div class="metric" role="listitem"><div class="kpi" id="kpi-found">312</div><div class="label">Firmwares cataloged</div></div>
-              <div class="metric" role="listitem"><div class="kpi" id="kpi-restored">147</div><div class="label">Fully restored</div></div>
-              <div class="metric" role="listitem"><div class="kpi" id="kpi-community">1,980+</div><div class="label">Community members</div></div>
+              <div class="metric" role="listitem"><div class="kpi" id="kpi-found">0</div><div class="label">Prototypes cataloged</div></div>
+			  <div class="metric" role="listitem"><div class="kpi" id="kpi-found">0</div><div class="label">Firmwares cataloged</div></div>
+              <div class="metric" role="listitem"><div class="kpi" id="kpi-restored">0</div><div class="label">Fully restored</div></div>
+              <div class="metric" role="listitem"><div class="kpi" id="kpi-community">2</div><div class="label">Community members</div></div>
             </div>
           </div>
         </div>
